syntax = "proto3";

package greetings;

service GreetingService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string status = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string status = 1;
}

message UpdateUserRequest {
  string username = 1;
  string newPassword = 2;
}

message UpdateUserResponse {
  string status = 1;
}

message DeleteUserRequest {
  string username = 1;
}

message DeleteUserResponse {
  string status = 1;
}

message GetUserRequest {
  string username = 1;
}

message GetUserResponse {
  string username = 1;
  string password = 2;
}